@@ -20,6 +20,8 @@
 package org.apache.iceberg.mr.hive;
 
 import java.io.IOException;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
@@ -27,39 +29,65 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Properties;
-import java.util.Set;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import org.apache.commons.collections.CollectionUtils;
+import org.apache.commons.lang3.ObjectUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.hive.common.TableName;
 import org.apache.hadoop.hive.metastore.HiveMetaHook;
 import org.apache.hadoop.hive.metastore.PartitionDropOptions;
+import org.apache.hadoop.hive.metastore.Warehouse;
+import org.apache.hadoop.hive.metastore.api.DropPartitionsExpr;
 import org.apache.hadoop.hive.metastore.api.EnvironmentContext;
 import org.apache.hadoop.hive.metastore.api.FieldSchema;
 import org.apache.hadoop.hive.metastore.api.MetaException;
+import org.apache.hadoop.hive.metastore.api.RequestPartsSpec;
 import org.apache.hadoop.hive.metastore.api.SerDeInfo;
 import org.apache.hadoop.hive.metastore.api.StorageDescriptor;
 import org.apache.hadoop.hive.metastore.api.hive_metastoreConstants;
+import org.apache.hadoop.hive.metastore.client.ThriftHiveMetaStoreClient;
 import org.apache.hadoop.hive.metastore.partition.spec.PartitionSpecProxy;
 import org.apache.hadoop.hive.metastore.utils.MetaStoreUtils;
+import org.apache.hadoop.hive.ql.QueryState;
 import org.apache.hadoop.hive.ql.ddl.table.AlterTableType;
+import org.apache.hadoop.hive.ql.exec.SerializationUtilities;
 import org.apache.hadoop.hive.ql.io.AcidUtils;
+import org.apache.hadoop.hive.ql.io.sarg.ConvertAstToSearchArg;
+import org.apache.hadoop.hive.ql.io.sarg.PredicateLeaf;
+import org.apache.hadoop.hive.ql.io.sarg.SearchArgument;
 import org.apache.hadoop.hive.ql.metadata.Hive;
 import org.apache.hadoop.hive.ql.metadata.HiveException;
+import org.apache.hadoop.hive.ql.metadata.HiveUtils;
 import org.apache.hadoop.hive.ql.parse.PartitionTransform;
-import org.apache.hadoop.hive.ql.parse.PartitionTransformSpec;
+import org.apache.hadoop.hive.ql.parse.TransformSpec;
+import org.apache.hadoop.hive.ql.plan.ExprNodeDesc;
+import org.apache.hadoop.hive.ql.plan.ExprNodeGenericFuncDesc;
+import org.apache.hadoop.hive.ql.plan.HiveOperation;
 import org.apache.hadoop.hive.ql.session.SessionState;
 import org.apache.hadoop.hive.ql.session.SessionStateUtil;
+import org.apache.hadoop.hive.serde2.objectinspector.PrimitiveObjectInspector;
+import org.apache.hadoop.hive.serde2.typeinfo.ListTypeInfo;
+import org.apache.hadoop.hive.serde2.typeinfo.MapTypeInfo;
+import org.apache.hadoop.hive.serde2.typeinfo.PrimitiveTypeInfo;
+import org.apache.hadoop.hive.serde2.typeinfo.StructTypeInfo;
+import org.apache.hadoop.hive.serde2.typeinfo.TypeInfo;
 import org.apache.hadoop.hive.serde2.typeinfo.TypeInfoUtils;
 import org.apache.hadoop.util.StringUtils;
 import org.apache.iceberg.BaseMetastoreTableOperations;
 import org.apache.iceberg.BaseTable;
 import org.apache.iceberg.CatalogUtil;
 import org.apache.iceberg.DeleteFiles;
-import org.apache.iceberg.FileFormat;
+import org.apache.iceberg.FileScanTask;
+import org.apache.iceberg.MetadataTableType;
+import org.apache.iceberg.MetadataTableUtils;
+import org.apache.iceberg.PartitionData;
+import org.apache.iceberg.PartitionField;
 import org.apache.iceberg.PartitionSpec;
 import org.apache.iceberg.PartitionSpecParser;
+import org.apache.iceberg.PartitionsTable;
 import org.apache.iceberg.Schema;
 import org.apache.iceberg.SchemaParser;
 import org.apache.iceberg.Table;
@@ -72,9 +100,19 @@ import org.apache.iceberg.UpdateProperties;
 import org.apache.iceberg.UpdateSchema;
 import org.apache.iceberg.catalog.TableIdentifier;
 import org.apache.iceberg.exceptions.NoSuchTableException;
+import org.apache.iceberg.expressions.Expression;
 import org.apache.iceberg.expressions.Expressions;
+import org.apache.iceberg.expressions.ResidualEvaluator;
+import org.apache.iceberg.expressions.UnboundPredicate;
+import org.apache.iceberg.expressions.UnboundTerm;
+import org.apache.iceberg.hive.CachedClientPool;
+import org.apache.iceberg.hive.CatalogUtils;
+import org.apache.iceberg.hive.HiveLock;
 import org.apache.iceberg.hive.HiveSchemaUtil;
 import org.apache.iceberg.hive.HiveTableOperations;
+import org.apache.iceberg.hive.MetastoreLock;
+import org.apache.iceberg.hive.NoLock;
+import org.apache.iceberg.io.CloseableIterable;
 import org.apache.iceberg.io.FileIO;
 import org.apache.iceberg.mapping.MappingUtil;
 import org.apache.iceberg.mapping.NameMapping;
@@ -85,30 +123,26 @@ import org.apache.iceberg.relocated.com.google.common.base.Preconditions;
 import org.apache.iceberg.relocated.com.google.common.base.Splitter;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableList;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableMap;
-import org.apache.iceberg.relocated.com.google.common.collect.ImmutableSet;
 import org.apache.iceberg.relocated.com.google.common.collect.Lists;
+import org.apache.iceberg.relocated.com.google.common.collect.Maps;
+import org.apache.iceberg.relocated.com.google.common.collect.Sets;
+import org.apache.iceberg.types.Conversions;
 import org.apache.iceberg.types.Type;
+import org.apache.iceberg.types.Types;
 import org.apache.iceberg.util.Pair;
+import org.apache.iceberg.util.StructProjection;
 import org.apache.thrift.TException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-public class HiveIcebergMetaHook implements HiveMetaHook {
+public class HiveIcebergMetaHook extends BaseHiveIcebergMetaHook {
   private static final Logger LOG = LoggerFactory.getLogger(HiveIcebergMetaHook.class);
-  public static final Map<String, String> COMMON_HMS_PROPERTIES = ImmutableMap.of(
-      BaseMetastoreTableOperations.TABLE_TYPE_PROP, BaseMetastoreTableOperations.ICEBERG_TABLE_TYPE_VALUE.toUpperCase()
-  );
-  private static final Set<String> PARAMETERS_TO_REMOVE = ImmutableSet
-      .of(InputFormatConfig.TABLE_SCHEMA, Catalogs.LOCATION, Catalogs.NAME, InputFormatConfig.PARTITION_SPEC);
-  private static final Set<String> PROPERTIES_TO_REMOVE = ImmutableSet
-      // We don't want to push down the metadata location props to Iceberg from HMS,
-      // since the snapshot pointer in HMS would always be one step ahead
-      .of(BaseMetastoreTableOperations.METADATA_LOCATION_PROP,
-      BaseMetastoreTableOperations.PREVIOUS_METADATA_LOCATION_PROP);
   static final EnumSet<AlterTableType> SUPPORTED_ALTER_OPS = EnumSet.of(
-      AlterTableType.ADDCOLS, AlterTableType.REPLACE_COLUMNS, AlterTableType.RENAME_COLUMN,
+      AlterTableType.ADDCOLS, AlterTableType.REPLACE_COLUMNS, AlterTableType.RENAME_COLUMN, AlterTableType.DROP_COLUMN,
       AlterTableType.ADDPROPS, AlterTableType.DROPPROPS, AlterTableType.SETPARTITIONSPEC,
-      AlterTableType.UPDATE_COLUMNS, AlterTableType.SETPARTITIONSPEC, AlterTableType.EXECUTE);
+      AlterTableType.UPDATE_COLUMNS, AlterTableType.RENAME, AlterTableType.EXECUTE, AlterTableType.CREATE_BRANCH,
+      AlterTableType.CREATE_TAG, AlterTableType.DROP_BRANCH, AlterTableType.RENAME_BRANCH, AlterTableType.DROPPARTITION,
+      AlterTableType.DROP_TAG, AlterTableType.COMPACT, AlterTableType.REPLACE_SNAPSHOTREF);
   private static final List<String> MIGRATION_ALLOWED_SOURCE_FORMATS = ImmutableList.of(
       FileFormat.PARQUET.name().toLowerCase(),
       FileFormat.ORC.name().toLowerCase(),
@@ -117,77 +151,21 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
   private static final List<org.apache.commons.lang3.tuple.Pair<Integer, byte[]>> EMPTY_FILTER =
       Lists.newArrayList(org.apache.commons.lang3.tuple.Pair.of(1, new byte[0]));
   static final String MIGRATED_TO_ICEBERG = "MIGRATED_TO_ICEBERG";
+  static final String DECIMAL64_VECTORIZATION = "iceberg.decimal64.vectorization";
+  static final String MANUAL_ICEBERG_METADATA_LOCATION_CHANGE = "MANUAL_ICEBERG_METADATA_LOCATION_CHANGE";
 
-  private final Configuration conf;
-  private Table icebergTable = null;
-  private Properties catalogProperties;
   private boolean deleteIcebergTable;
   private FileIO deleteIo;
   private TableMetadata deleteMetadata;
   private boolean isTableMigration;
   private PreAlterTableProperties preAlterTableProperties;
   private UpdateSchema updateSchema;
-  private UpdatePartitionSpec updatePartitionSpec;
   private Transaction transaction;
   private AlterTableType currentAlterTableOp;
-  private boolean createHMSTableInHook = false;
+  private HiveLock commitLock;
 
   public HiveIcebergMetaHook(Configuration conf) {
-    this.conf = conf;
-  }
-
-  @Override
-  public void preCreateTable(org.apache.hadoop.hive.metastore.api.Table hmsTable) {
-    this.catalogProperties = getCatalogProperties(hmsTable);
-
-    // Set the table type even for non HiveCatalog based tables
-    hmsTable.getParameters().put(BaseMetastoreTableOperations.TABLE_TYPE_PROP,
-        BaseMetastoreTableOperations.ICEBERG_TABLE_TYPE_VALUE.toUpperCase());
-
-    if (!Catalogs.hiveCatalog(conf, catalogProperties)) {
-      // For non-HiveCatalog tables too, we should set the input and output format
-      // so that the table can be read by other engines like Impala
-      hmsTable.getSd().setInputFormat(HiveIcebergInputFormat.class.getCanonicalName());
-      hmsTable.getSd().setOutputFormat(HiveIcebergOutputFormat.class.getCanonicalName());
-
-      // If not using HiveCatalog check for existing table
-      try {
-
-        this.icebergTable = IcebergTableUtil.getTable(conf, catalogProperties);
-
-        Preconditions.checkArgument(catalogProperties.getProperty(InputFormatConfig.TABLE_SCHEMA) == null,
-            "Iceberg table already created - can not use provided schema");
-        Preconditions.checkArgument(catalogProperties.getProperty(InputFormatConfig.PARTITION_SPEC) == null,
-            "Iceberg table already created - can not use provided partition specification");
-
-        LOG.info("Iceberg table already exists {}", icebergTable);
-
-        return;
-      } catch (NoSuchTableException nte) {
-        // If the table does not exist we will create it below
-      }
-    }
-
-    // If the table does not exist collect data for table creation
-    // - InputFormatConfig.TABLE_SCHEMA, InputFormatConfig.PARTITION_SPEC takes precedence so the user can override the
-    // Iceberg schema and specification generated by the code
-
-    Schema schema = schema(catalogProperties, hmsTable);
-    PartitionSpec spec = spec(conf, schema, hmsTable);
-
-    // If there are partition keys specified remove them from the HMS table and add them to the column list
-    if (hmsTable.isSetPartitionKeys()) {
-      hmsTable.getSd().getCols().addAll(hmsTable.getPartitionKeys());
-      hmsTable.setPartitionKeysIsSet(false);
-    }
-
-    catalogProperties.put(InputFormatConfig.TABLE_SCHEMA, SchemaParser.toJson(schema));
-    catalogProperties.put(InputFormatConfig.PARTITION_SPEC, PartitionSpecParser.toJson(spec));
-    setCommonHmsTablePropertiesForIceberg(hmsTable);
-
-    if (hmsTable.getParameters().containsKey(BaseMetastoreTableOperations.METADATA_LOCATION_PROP)) {
-      createHMSTableInHook = true;
-    }
+    super(conf);
   }
 
   @Override
@@ -198,16 +176,27 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
   @Override
   public void commitCreateTable(org.apache.hadoop.hive.metastore.api.Table hmsTable) {
     if (icebergTable == null) {
-      if (Catalogs.hiveCatalog(conf, catalogProperties)) {
-        catalogProperties.put(TableProperties.ENGINE_HIVE_ENABLED, true);
-      }
+
+      setFileFormat(catalogProperties.getProperty(TableProperties.DEFAULT_FILE_FORMAT));
 
       String metadataLocation = hmsTable.getParameters().get(BaseMetastoreTableOperations.METADATA_LOCATION_PROP);
+      Table table;
       if (metadataLocation != null) {
-        Catalogs.registerTable(conf, catalogProperties, metadataLocation);
+        table = Catalogs.registerTable(conf, catalogProperties, metadataLocation);
       } else {
-        Catalogs.createTable(conf, catalogProperties);
+        table = Catalogs.createTable(conf, catalogProperties);
       }
+
+      if (!HiveTableUtil.isCtas(catalogProperties)) {
+        return;
+      }
+
+      // set this in the query state so that we can rollback the table in the lifecycle hook in case of failures
+      String tableIdentifier = catalogProperties.getProperty(Catalogs.NAME);
+      SessionStateUtil.addResource(conf, InputFormatConfig.CTAS_TABLE_NAME, tableIdentifier);
+      SessionStateUtil.addResource(conf, tableIdentifier, table);
+
+      HiveTableUtil.createFileForTableObject(table, conf);
     }
   }
 
@@ -218,7 +207,7 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
 
   @Override
   public void preDropTable(org.apache.hadoop.hive.metastore.api.Table hmsTable, boolean deleteData) {
-    this.catalogProperties = getCatalogProperties(hmsTable);
+    this.catalogProperties = CatalogUtils.getCatalogProperties(hmsTable);
     this.deleteIcebergTable = hmsTable.getParameters() != null &&
         "TRUE".equalsIgnoreCase(hmsTable.getParameters().get(InputFormatConfig.EXTERNAL_TABLE_PURGE));
 
@@ -268,10 +257,45 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
   @Override
   public void preAlterTable(org.apache.hadoop.hive.metastore.api.Table hmsTable, EnvironmentContext context)
       throws MetaException {
+    catalogProperties = CatalogUtils.getCatalogProperties(hmsTable);
     setupAlterOperationType(hmsTable, context);
-    catalogProperties = getCatalogProperties(hmsTable);
+    if (AlterTableType.RENAME.equals(currentAlterTableOp)) {
+      catalogProperties.put(Catalogs.NAME, TableIdentifier.of(context.getProperties().get(OLD_DB_NAME),
+          context.getProperties().get(OLD_TABLE_NAME)).toString());
+    }
+    if (commitLock == null) {
+      commitLock = lockObject(hmsTable);
+    }
+
     try {
-      icebergTable = IcebergTableUtil.getTable(conf, catalogProperties);
+      commitLock.lock();
+      doPreAlterTable(hmsTable, context);
+    } catch (Exception e) {
+      commitLock.unlock();
+      throw new MetaException(StringUtils.stringifyException(e));
+    }
+  }
+
+  private HiveLock lockObject(org.apache.hadoop.hive.metastore.api.Table hmsTable) {
+    if (!HiveTableOperations.hiveLockEnabled(hmsTable.getParameters(), conf) ||
+        SessionStateUtil.getQueryState(conf)
+            .map(QueryState::getHiveOperation)
+            .filter(opType -> HiveOperation.QUERY == opType)
+            .isPresent()) {
+      return new NoLock();
+    } else {
+      return new MetastoreLock(
+          conf,
+          new CachedClientPool(conf, Maps.fromProperties(catalogProperties)),
+          catalogProperties.getProperty(Catalogs.NAME), hmsTable.getDbName(),
+          hmsTable.getTableName());
+    }
+  }
+
+  private void doPreAlterTable(org.apache.hadoop.hive.metastore.api.Table hmsTable, EnvironmentContext context)
+      throws MetaException {
+    try {
+      icebergTable = IcebergTableUtil.getTable(conf, catalogProperties, true);
     } catch (NoSuchTableException nte) {
       context.getProperties().put(MIGRATE_HIVE_TO_ICEBERG, "true");
       // If the iceberg table does not exist, then this is an ALTER command aimed at migrating the table to iceberg
@@ -279,28 +303,28 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
       // If so, we will create the iceberg table in commitAlterTable and go ahead with the migration
       assertTableCanBeMigrated(hmsTable);
       isTableMigration = true;
+      // Set whether the format is ORC, to be used during vectorization.
+      setOrcOnlyFilesParam(hmsTable);
 
       StorageDescriptor sd = hmsTable.getSd();
       preAlterTableProperties = new PreAlterTableProperties();
       preAlterTableProperties.tableLocation = sd.getLocation();
       preAlterTableProperties.format = sd.getInputFormat();
-      preAlterTableProperties.schema = schema(catalogProperties, hmsTable);
+      preAlterTableProperties.schema =
+          schema(catalogProperties, hmsTable, Collections.emptySet(), Collections.emptyList());
       preAlterTableProperties.partitionKeys = hmsTable.getPartitionKeys();
 
       context.getProperties().put(HiveMetaHook.ALLOW_PARTITION_KEY_CHANGE, "true");
       // If there are partition keys specified remove them from the HMS table and add them to the column list
       try {
         Hive db = SessionState.get().getHiveDb();
-        preAlterTableProperties.partitionSpecProxy = db.getMSC().listPartitionSpecs(hmsTable.getCatName(),
-            hmsTable.getDbName(), hmsTable.getTableName(), Integer.MAX_VALUE);
+        preAlterTableProperties.partitionSpecProxy = db.getMSC().listPartitionSpecs(
+            hmsTable.getCatName(), hmsTable.getDbName(), hmsTable.getTableName(), Integer.MAX_VALUE);
         if (hmsTable.isSetPartitionKeys() && !hmsTable.getPartitionKeys().isEmpty()) {
           db.dropPartitions(hmsTable.getDbName(), hmsTable.getTableName(), EMPTY_FILTER, DROP_OPTIONS);
 
-          List<PartitionTransformSpec> spec = PartitionTransform.getPartitionTransformSpec(hmsTable.getPartitionKeys());
-          if (!SessionStateUtil.addResource(conf, hive_metastoreConstants.PARTITION_TRANSFORM_SPEC, spec)) {
-            throw new MetaException("Query state attached to Session state must be not null. " +
-                "Partition transform metadata cannot be saved.");
-          }
+          List<TransformSpec> spec = PartitionTransform.getPartitionTransformSpec(hmsTable.getPartitionKeys());
+          SessionStateUtil.addResourceOrThrow(conf, hive_metastoreConstants.PARTITION_TRANSFORM_SPEC, spec);
           hmsTable.getSd().getCols().addAll(hmsTable.getPartitionKeys());
           hmsTable.setPartitionKeysIsSet(false);
         }
@@ -314,8 +338,7 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
 
       sd.setInputFormat(HiveIcebergInputFormat.class.getCanonicalName());
       sd.setOutputFormat(HiveIcebergOutputFormat.class.getCanonicalName());
-      sd.setSerdeInfo(new SerDeInfo("icebergSerde", HiveIcebergSerDe.class.getCanonicalName(),
-          Collections.emptyMap()));
+      sd.setSerdeInfo(new SerDeInfo("icebergSerde", HiveIcebergSerDe.class.getCanonicalName(), Collections.emptyMap()));
       setCommonHmsTablePropertiesForIceberg(hmsTable);
       // set an additional table prop to designate that this table has been migrated to Iceberg, i.e.
       // all or some of its data files have not been written out using the Iceberg writer, and therefore those data
@@ -331,14 +354,26 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
     } else if (AlterTableType.REPLACE_COLUMNS.equals(currentAlterTableOp)) {
       assertNotMigratedTable(hmsTable.getParameters(), currentAlterTableOp.getName().toUpperCase());
       handleReplaceColumns(hmsTable);
+    } else if (AlterTableType.DROP_COLUMN.equals(currentAlterTableOp)) {
+      assertNotMigratedTable(hmsTable.getParameters(), currentAlterTableOp.getName().toUpperCase());
+      handleDropColumn(hmsTable);
     } else if (AlterTableType.RENAME_COLUMN.equals(currentAlterTableOp)) {
       // passing in the "CHANGE COLUMN" string instead, since RENAME COLUMN is not part of SQL syntax (not to mention
       // that users can change data types or reorder columns too with this alter op type, so its name is misleading..)
       assertNotMigratedTable(hmsTable.getParameters(), "CHANGE COLUMN");
       handleChangeColumn(hmsTable);
-    } else if (AlterTableType.ADDPROPS.equals(currentAlterTableOp)) {
-      assertNotCrossTableMetadataLocationChange(hmsTable.getParameters());
+    } else {
+      setWriteModeDefaults(icebergTable, hmsTable.getParameters(), context);
+      assertNotCrossTableMetadataLocationChange(hmsTable.getParameters(), context);
     }
+
+    // Migration case is already handled above, in case of migration we don't have all the properties set till this
+    // point.
+    if (!isTableMigration) {
+      // Set whether the format is ORC, to be used during vectorization.
+      setOrcOnlyFilesParam(hmsTable);
+    }
+
   }
 
   /**
@@ -346,7 +381,7 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
    * the current metadata uuid and the new metadata uuid matches.
    * @param tblParams hms table properties, must be non-null
    */
-  private void assertNotCrossTableMetadataLocationChange(Map<String, String> tblParams) {
+  private void assertNotCrossTableMetadataLocationChange(Map<String, String> tblParams, EnvironmentContext context) {
     if (tblParams.containsKey(BaseMetastoreTableOperations.METADATA_LOCATION_PROP)) {
       Preconditions.checkArgument(icebergTable != null,
           "Cannot perform table migration to Iceberg and setting the snapshot location in one step. " +
@@ -360,6 +395,17 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
             String.format("Cannot change iceberg table %s metadata location pointing to another table's metadata %s",
                 icebergTable.name(), newMetadataLocation)
         );
+      }
+      if (!currentMetadata.metadataFileLocation().equals(newMetadataLocation) &&
+          !context.getProperties().containsKey(MANUAL_ICEBERG_METADATA_LOCATION_CHANGE)) {
+        // If we got here then this is an alter table operation where the table to be changed had an Iceberg commit
+        // meanwhile. The base metadata locations differ, while we know that this wasn't an intentional, manual
+        // metadata_location set by a user. To protect the interim commit we need to refresh the metadata file location.
+        tblParams.put(BaseMetastoreTableOperations.METADATA_LOCATION_PROP, currentMetadata.metadataFileLocation());
+        LOG.warn("Detected an alter table operation attempting to do alterations on an Iceberg table with a stale " +
+            "metadata_location. Considered base metadata_location: {}, Actual metadata_location: {}. Will override " +
+            "this request with the refreshed metadata_location in order to preserve the concurrent commit.",
+            newMetadataLocation, currentMetadata.metadataFileLocation());
       }
     }
   }
@@ -394,23 +440,62 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
     if (!hasCorrectFileFormat) {
       throw new MetaException("Cannot convert hive table to iceberg with input format: " + sd.getInputFormat());
     }
+
+    List<TypeInfo> typeInfos = hmsTable.getSd().getCols().stream()
+        .map(f -> TypeInfoUtils.getTypeInfoFromTypeString(f.getType()))
+        .toList();
+    for (TypeInfo typeInfo : typeInfos) {
+      validateColumnType(typeInfo);
+    }
   }
+
+  private void validateColumnType(TypeInfo typeInfo) throws MetaException {
+    switch (typeInfo.getCategory()) {
+      case PRIMITIVE:
+        PrimitiveObjectInspector.PrimitiveCategory primitiveCategory =
+            ((PrimitiveTypeInfo) typeInfo).getPrimitiveCategory();
+        if (primitiveCategory.equals(PrimitiveObjectInspector.PrimitiveCategory.CHAR) || primitiveCategory.equals(
+            PrimitiveObjectInspector.PrimitiveCategory.VARCHAR)) {
+          throw new MetaException(String.format(
+              "Cannot convert hive table to iceberg that contains column type %s. " + "Use string type columns instead",
+             primitiveCategory));
+        }
+        break;
+      case STRUCT:
+        List<TypeInfo> structTypeInfos = ((StructTypeInfo) typeInfo).getAllStructFieldTypeInfos();
+        for (TypeInfo structTypeInfo : structTypeInfos) {
+          validateColumnType(structTypeInfo);
+        }
+        break;
+      case LIST:
+        validateColumnType(((ListTypeInfo) typeInfo).getListElementTypeInfo());
+        break;
+      case MAP:
+        MapTypeInfo mapTypeInfo = (MapTypeInfo) typeInfo;
+        validateColumnType(mapTypeInfo.getMapKeyTypeInfo());
+        validateColumnType(mapTypeInfo.getMapValueTypeInfo());
+        break;
+    }
+  }
+
 
   @Override
   public void commitAlterTable(org.apache.hadoop.hive.metastore.api.Table hmsTable, EnvironmentContext context)
       throws MetaException {
+    if (commitLock == null) {
+      throw new IllegalStateException("Hive commit lock should already be set");
+    }
+    commitLock.unlock();
     if (isTableMigration) {
-      catalogProperties = getCatalogProperties(hmsTable);
+      catalogProperties = CatalogUtils.getCatalogProperties(hmsTable);
       catalogProperties.put(InputFormatConfig.TABLE_SCHEMA, SchemaParser.toJson(preAlterTableProperties.schema));
       catalogProperties.put(InputFormatConfig.PARTITION_SPEC, PartitionSpecParser.toJson(preAlterTableProperties.spec));
-      setFileFormat();
-      if (Catalogs.hiveCatalog(conf, catalogProperties)) {
-        catalogProperties.put(TableProperties.ENGINE_HIVE_ENABLED, true);
-      }
+      setFileFormat(preAlterTableProperties.format);
       HiveTableUtil.importFiles(preAlterTableProperties.tableLocation, preAlterTableProperties.format,
           preAlterTableProperties.partitionSpecProxy, preAlterTableProperties.partitionKeys, catalogProperties, conf);
     } else if (currentAlterTableOp != null) {
       switch (currentAlterTableOp) {
+        case DROP_COLUMN:
         case REPLACE_COLUMNS:
         case RENAME_COLUMN:
         case ADDCOLS:
@@ -425,17 +510,25 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
         case SETPARTITIONSPEC:
           IcebergTableUtil.updateSpec(conf, icebergTable);
           break;
+        case RENAME:
+          Catalogs.renameTable(conf, catalogProperties, TableIdentifier.of(hmsTable.getDbName(),
+              hmsTable.getTableName()));
+          break;
       }
     }
   }
 
   @Override
   public void rollbackAlterTable(org.apache.hadoop.hive.metastore.api.Table hmsTable, EnvironmentContext context) {
+    if (commitLock == null) {
+      throw new IllegalStateException("Hive commit lock should already be set");
+    }
+    commitLock.unlock();
     if (Boolean.parseBoolean(context.getProperties().getOrDefault(MIGRATE_HIVE_TO_ICEBERG, "false"))) {
       LOG.debug("Initiating rollback for table {} at location {}",
           hmsTable.getTableName(), hmsTable.getSd().getLocation());
       context.getProperties().put(INITIALIZE_ROLLBACK_MIGRATION, "true");
-      this.catalogProperties = getCatalogProperties(hmsTable);
+      this.catalogProperties = CatalogUtils.getCatalogProperties(hmsTable);
       try {
         this.icebergTable = Catalogs.loadTable(conf, catalogProperties);
       } catch (NoSuchTableException nte) {
@@ -457,12 +550,51 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
   }
 
   @Override
-  public void preTruncateTable(org.apache.hadoop.hive.metastore.api.Table table, EnvironmentContext context)
+  public void preTruncateTable(org.apache.hadoop.hive.metastore.api.Table table, EnvironmentContext context,
+      List<String> partNames)
       throws MetaException {
-    this.catalogProperties = getCatalogProperties(table);
+    this.catalogProperties = CatalogUtils.getCatalogProperties(table);
     this.icebergTable = Catalogs.loadTable(conf, catalogProperties);
+    Map<String, PartitionField> partitionFieldMap = icebergTable.spec().fields().stream()
+        .collect(Collectors.toMap(PartitionField::name, Function.identity()));
+    Expression finalExp = CollectionUtils.isEmpty(partNames) ? Expressions.alwaysTrue() : Expressions.alwaysFalse();
+    if (partNames != null) {
+      for (String partName : partNames) {
+        Map<String, String> specMap = Warehouse.makeSpecFromName(partName);
+        Expression subExp = Expressions.alwaysTrue();
+        for (Map.Entry<String, String> entry : specMap.entrySet()) {
+          // Since Iceberg encodes the values in UTF-8, we need to decode it.
+          String partColValue = URLDecoder.decode(entry.getValue(), StandardCharsets.UTF_8);
+
+          if (partitionFieldMap.containsKey(entry.getKey())) {
+            PartitionField partitionField = partitionFieldMap.get(entry.getKey());
+            Type resultType = partitionField.transform().getResultType(icebergTable.schema()
+                    .findField(partitionField.sourceId()).type());
+            TransformSpec.TransformType transformType = TransformSpec.fromString(partitionField.transform().toString());
+            Object value = Conversions.fromPartitionString(resultType, partColValue);
+            Iterable iterable = () -> Collections.singletonList(value).iterator();
+            if (TransformSpec.TransformType.IDENTITY.equals(transformType)) {
+              Expression boundPredicate = Expressions.in(partitionField.name(), iterable);
+              subExp = Expressions.and(subExp, boundPredicate);
+            } else {
+              throw new MetaException(
+                  String.format("Partition transforms are not supported via truncate operation: %s", entry.getKey()));
+            }
+          } else {
+            throw new MetaException(String.format("No partition column/transform name by the name: %s",
+                entry.getKey()));
+          }
+        }
+        finalExp = Expressions.or(finalExp, subExp);
+      }
+    }
+
     DeleteFiles delete = icebergTable.newDelete();
-    delete.deleteFromRowFilter(Expressions.alwaysTrue());
+    String branchName = context.getProperties().get(Catalogs.SNAPSHOT_REF);
+    if (branchName != null) {
+      delete.toBranch(HiveUtils.getTableSnapshotRef(branchName));
+    }
+    delete.deleteFromRowFilter(finalExp);
     delete.commit();
     context.putToProperties("truncateSkipDataDeletion", "true");
   }
@@ -500,116 +632,23 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
             "Unsupported ALTER TABLE operation type on Iceberg table " + tableName + ", must be one of: " +
                 SUPPORTED_ALTER_OPS);
       }
+
+      if (currentAlterTableOp != AlterTableType.ADDPROPS && Catalogs.hiveCatalog(conf, catalogProperties)) {
+        context.getProperties().put(SKIP_METASTORE_ALTER, "true");
+      }
     }
   }
 
-  private void setFileFormat() {
-    String format = preAlterTableProperties.format.toLowerCase();
-    if (format.contains("orc")) {
-      catalogProperties.put(TableProperties.DEFAULT_FILE_FORMAT, "orc");
-    } else if (format.contains("parquet")) {
-      catalogProperties.put(TableProperties.DEFAULT_FILE_FORMAT, "parquet");
-    } else if (format.contains("avro")) {
-      catalogProperties.put(TableProperties.DEFAULT_FILE_FORMAT, "avro");
-    }
-  }
-
-  private void setCommonHmsTablePropertiesForIceberg(org.apache.hadoop.hive.metastore.api.Table hmsTable) {
-    // If the table is not managed by Hive catalog then the location should be set
-    if (!Catalogs.hiveCatalog(conf, catalogProperties)) {
-      Preconditions.checkArgument(hmsTable.getSd() != null && hmsTable.getSd().getLocation() != null,
-          "Table location not set");
+  private void setFileFormat(String format) {
+    if (format == null) {
+      return;
     }
 
-    Map<String, String> hmsParams = hmsTable.getParameters();
-    COMMON_HMS_PROPERTIES.forEach(hmsParams::putIfAbsent);
-
-    // Remove null values from hms table properties
-    hmsParams.entrySet().removeIf(e -> e.getKey() == null || e.getValue() == null);
-
-    // Remove creation related properties
-    PARAMETERS_TO_REMOVE.forEach(hmsParams::remove);
-  }
-
-  /**
-   * Calculates the properties we would like to send to the catalog.
-   * <ul>
-   * <li>The base of the properties is the properties stored at the Hive Metastore for the given table
-   * <li>We add the {@link Catalogs#LOCATION} as the table location
-   * <li>We add the {@link Catalogs#NAME} as TableIdentifier defined by the database name and table name
-   * <li>We add the serdeProperties of the HMS table
-   * <li>We remove some parameters that we don't want to push down to the Iceberg table props
-   * </ul>
-   * @param hmsTable Table for which we are calculating the properties
-   * @return The properties we can provide for Iceberg functions, like {@link Catalogs}
-   */
-  private static Properties getCatalogProperties(org.apache.hadoop.hive.metastore.api.Table hmsTable) {
-    Properties properties = new Properties();
-
-    hmsTable.getParameters().entrySet().stream().filter(e -> e.getKey() != null && e.getValue() != null).forEach(e -> {
-      // translate key names between HMS and Iceberg where needed
-      String icebergKey = HiveTableOperations.translateToIcebergProp(e.getKey());
-      properties.put(icebergKey, e.getValue());
-    });
-
-    if (properties.get(Catalogs.LOCATION) == null &&
-        hmsTable.getSd() != null && hmsTable.getSd().getLocation() != null) {
-      properties.put(Catalogs.LOCATION, hmsTable.getSd().getLocation());
-    }
-
-    if (properties.get(Catalogs.NAME) == null) {
-      properties.put(Catalogs.NAME, TableIdentifier.of(hmsTable.getDbName(), hmsTable.getTableName()).toString());
-    }
-
-    SerDeInfo serdeInfo = hmsTable.getSd().getSerdeInfo();
-    if (serdeInfo != null) {
-      serdeInfo.getParameters().entrySet().stream()
-          .filter(e -> e.getKey() != null && e.getValue() != null).forEach(e -> {
-            String icebergKey = HiveTableOperations.translateToIcebergProp(e.getKey());
-            properties.put(icebergKey, e.getValue());
-          });
-    }
-
-    // Remove HMS table parameters we don't want to propagate to Iceberg
-    PROPERTIES_TO_REMOVE.forEach(properties::remove);
-
-    return properties;
-  }
-
-  private Schema schema(Properties properties, org.apache.hadoop.hive.metastore.api.Table hmsTable) {
-    boolean autoConversion = conf.getBoolean(InputFormatConfig.SCHEMA_AUTO_CONVERSION, false);
-
-    if (properties.getProperty(InputFormatConfig.TABLE_SCHEMA) != null) {
-      return SchemaParser.fromJson(properties.getProperty(InputFormatConfig.TABLE_SCHEMA));
-    } else if (hmsTable.isSetPartitionKeys() && !hmsTable.getPartitionKeys().isEmpty()) {
-      // Add partitioning columns to the original column list before creating the Iceberg Schema
-      List<FieldSchema> cols = Lists.newArrayList(hmsTable.getSd().getCols());
-      cols.addAll(hmsTable.getPartitionKeys());
-      return HiveSchemaUtil.convert(cols, autoConversion);
-    } else {
-      return HiveSchemaUtil.convert(hmsTable.getSd().getCols(), autoConversion);
-    }
-  }
-
-  private static PartitionSpec spec(Configuration configuration, Schema schema,
-      org.apache.hadoop.hive.metastore.api.Table hmsTable) {
-
-    Preconditions.checkArgument(!hmsTable.isSetPartitionKeys() || hmsTable.getPartitionKeys().isEmpty(),
-        "We can only handle non-partitioned Hive tables. The Iceberg schema should be in " +
-            InputFormatConfig.PARTITION_SPEC + " or already converted to a partition transform ");
-
-    PartitionSpec spec = IcebergTableUtil.spec(configuration, schema);
-    if (spec != null) {
-      Preconditions.checkArgument(hmsTable.getParameters().get(InputFormatConfig.PARTITION_SPEC) == null,
-          "Provide only one of the following: Hive partition transform specification, or the " +
-              InputFormatConfig.PARTITION_SPEC + " property");
-      return spec;
-    }
-
-    if (hmsTable.getParameters().get(InputFormatConfig.PARTITION_SPEC) != null) {
-      return PartitionSpecParser.fromJson(schema, hmsTable.getParameters().get(InputFormatConfig.PARTITION_SPEC));
-    } else {
-      return PartitionSpec.unpartitioned();
+    String lowerCaseFormat = format.toLowerCase();
+    for (FileFormat fileFormat : FileFormat.values()) {
+      if (lowerCaseFormat.contains(fileFormat.getLabel())) {
+        catalogProperties.put(TableProperties.DEFAULT_FILE_FORMAT, fileFormat.getLabel());
+      }
     }
   }
 
@@ -626,6 +665,21 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
           HiveSchemaUtil.convert(TypeInfoUtils.getTypeInfoFromTypeString(addedCol.getType())), addedCol.getComment());
     }
     updateSchema.commit();
+  }
+
+  private void handleDropColumn(org.apache.hadoop.hive.metastore.api.Table hmsTable) {
+    List<FieldSchema> hmsCols = hmsTable.getSd().getCols();
+    List<FieldSchema> icebergCols = HiveSchemaUtil.convert(icebergTable.schema());
+
+    List<FieldSchema> removedCols = HiveSchemaUtil.getSchemaDiff(icebergCols, hmsCols, false).getMissingFromSecond();
+    if (removedCols.isEmpty()) {
+      return;
+    }
+
+    transaction = icebergTable.newTransaction();
+    transaction.updateSchema().deleteColumn(removedCols.getFirst().getName()).commit();
+    LOG.info("handleDropColumn: Dropping the following column for Iceberg table {}, col: {}", hmsTable.getTableName(),
+        removedCols);
   }
 
   private void handleReplaceColumns(org.apache.hadoop.hive.metastore.api.Table hmsTable) throws MetaException {
@@ -673,8 +727,8 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
     Map<String, String> renameMapping = ImmutableMap.of();
     if (!schemaDifference.getMissingFromSecond().isEmpty()) {
       renameMapping = ImmutableMap.of(
-          schemaDifference.getMissingFromSecond().get(0).getName(),
-          schemaDifference.getMissingFromFirst().get(0).getName());
+          schemaDifference.getMissingFromSecond().getFirst().getName(),
+          schemaDifference.getMissingFromFirst().getFirst().getName());
     }
     Pair<String, Optional<String>> outOfOrder = HiveSchemaUtil.getReorderedColumn(hmsCols, icebergCols, renameMapping);
 
@@ -691,8 +745,8 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
 
     // case 1: column name has been renamed
     if (!schemaDifference.getMissingFromSecond().isEmpty()) {
-      FieldSchema updatedField = schemaDifference.getMissingFromSecond().get(0);
-      FieldSchema oldField = schemaDifference.getMissingFromFirst().get(0);
+      FieldSchema updatedField = schemaDifference.getMissingFromSecond().getFirst();
+      FieldSchema oldField = schemaDifference.getMissingFromFirst().getFirst();
       updateSchema.renameColumn(oldField.getName(), updatedField.getName());
 
       // check if type/comment changed too
@@ -704,13 +758,13 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
 
     // case 2: only column type and/or comment changed
     } else if (!schemaDifference.getTypeChanged().isEmpty()) {
-      FieldSchema updatedField = schemaDifference.getTypeChanged().get(0);
+      FieldSchema updatedField = schemaDifference.getTypeChanged().getFirst();
       updateSchema.updateColumn(updatedField.getName(), getPrimitiveTypeOrThrow(updatedField),
           updatedField.getComment());
 
     // case 3: only comment changed
     } else if (!schemaDifference.getCommentChanged().isEmpty()) {
-      FieldSchema updatedField = schemaDifference.getCommentChanged().get(0);
+      FieldSchema updatedField = schemaDifference.getCommentChanged().getFirst();
       updateSchema.updateColumnDoc(updatedField.getName(), updatedField.getComment());
     }
 
@@ -730,10 +784,10 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
   private void handlePartitionRename(HiveSchemaUtil.SchemaDifference schemaDifference) {
     // in case a partition column has been renamed, spec needs to be adjusted too
     if (!schemaDifference.getMissingFromSecond().isEmpty()) {
-      FieldSchema oldField = schemaDifference.getMissingFromFirst().get(0);
-      FieldSchema updatedField = schemaDifference.getMissingFromSecond().get(0);
+      FieldSchema oldField = schemaDifference.getMissingFromFirst().getFirst();
+      FieldSchema updatedField = schemaDifference.getMissingFromSecond().getFirst();
       if (icebergTable.spec().fields().stream().anyMatch(pf -> pf.name().equals(oldField.getName()))) {
-        updatePartitionSpec = transaction.updateSpec();
+        UpdatePartitionSpec updatePartitionSpec = transaction.updateSpec();
         updatePartitionSpec.renameField(oldField.getName(), updatedField.getName());
         updatePartitionSpec.commit();
       }
@@ -749,7 +803,108 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
     return (Type.PrimitiveType) newType;
   }
 
-  private class PreAlterTableProperties {
+  @Override
+  public void preDropPartitions(org.apache.hadoop.hive.metastore.api.Table hmsTable,
+      EnvironmentContext context,
+      List<org.apache.commons.lang3.tuple.Pair<Integer, byte[]>> partExprs)
+      throws MetaException {
+    Table icebergTbl = IcebergTableUtil.getTable(conf, hmsTable);
+    DeleteFiles deleteFiles = icebergTbl.newDelete();
+    List<Expression> expressions = partExprs.stream().map(partExpr -> {
+      ExprNodeDesc exprNodeDesc = SerializationUtilities.deserializeObjectWithTypeInformation(
+          partExpr.getRight(), true);
+      SearchArgument sarg = ConvertAstToSearchArg.create(conf, (ExprNodeGenericFuncDesc) exprNodeDesc);
+      validatePartitionSpec(sarg, icebergTbl.spec());
+      return HiveIcebergFilterFactory.generateFilterExpression(sarg);
+    }).toList();
+    PartitionsTable partitionsTable = (PartitionsTable) MetadataTableUtils.createMetadataTableInstance(
+        icebergTbl, MetadataTableType.PARTITIONS);
+    List<PartitionData> partitionList = Lists.newArrayList();
+    Expression finalExpr = Expressions.alwaysFalse();
+    PartitionSpec pSpec = icebergTbl.spec();
+    for (Expression expr : expressions) {
+      finalExpr = Expressions.or(finalExpr, expr);
+    }
+    ResidualEvaluator resEval = ResidualEvaluator.of(icebergTbl.spec(), finalExpr, false);
+    try (CloseableIterable<FileScanTask> fileScanTasks = partitionsTable.newScan().planFiles()) {
+      fileScanTasks.forEach(task -> {
+        CloseableIterable<PartitionData> partitionData = CloseableIterable.transform(task.asDataTask().rows(), row -> {
+          StructProjection data = row.get(0, StructProjection.class);
+          return IcebergTableUtil.toPartitionData(data, pSpec.partitionType());
+        });
+        partitionData = CloseableIterable.filter(partitionData, pd ->
+            resEval.residualFor(pd).isEquivalentTo(Expressions.alwaysTrue()));
+        partitionList.addAll(Sets.newHashSet(partitionData));
+      });
+
+      Expression partitionSetFilter = Expressions.alwaysFalse();
+      for (PartitionData partitionData : partitionList) {
+        Expression partFilter = Expressions.alwaysTrue();
+
+        for (int index = 0; index < pSpec.fields().size(); index++) {
+          PartitionField field = icebergTbl.spec().fields().get(index);
+          UnboundPredicate<Object> equal = getPartitionPredicate(partitionData, field, index, icebergTbl.schema());
+          partFilter = Expressions.and(partFilter, equal);
+        }
+        partitionSetFilter = Expressions.or(partitionSetFilter, partFilter);
+      }
+
+      deleteFiles.deleteFromRowFilter(partitionSetFilter);
+      deleteFiles.commit();
+    } catch (IOException e) {
+      throw new MetaException(String.format("Error while fetching the partitions due to: %s", e));
+    }
+  }
+
+  @Override
+  public void preDropPartitions(org.apache.hadoop.hive.metastore.api.Table hmsTable,
+                                EnvironmentContext context,
+                                RequestPartsSpec partsSpec) throws MetaException {
+    if (partsSpec.isSetExprs()) {
+      List<DropPartitionsExpr> exprs = partsSpec.getExprs();
+      List<org.apache.commons.lang3.tuple.Pair<Integer, byte[]>> partExprs = Lists.newArrayList();
+      for (DropPartitionsExpr expr : exprs) {
+        partExprs.add(
+            org.apache.commons.lang3.tuple.Pair.of(expr.getPartArchiveLevel(), expr.getExpr()));
+      }
+      preDropPartitions(hmsTable, context, partExprs);
+    } else if (partsSpec.isSetNames()) {
+      preTruncateTable(hmsTable, context, partsSpec.getNames());
+    }
+    context.putToProperties(ThriftHiveMetaStoreClient.SKIP_DROP_PARTITION, "true");
+  }
+
+  private static void validatePartitionSpec(SearchArgument sarg, PartitionSpec partitionSpec) {
+    for (PredicateLeaf leaf : sarg.getLeaves()) {
+      TransformSpec transformSpec = TransformSpec.fromStringWithColumnName(leaf.getColumnName());
+      Types.NestedField column = partitionSpec.schema().findField(transformSpec.getColumnName());
+      PartitionField partitionColumn = partitionSpec.fields().stream()
+          .filter(pf -> pf.sourceId() == column.fieldId())
+          .findFirst().get();
+
+      if (!(partitionColumn.transform() == null && transformSpec.transformTypeString() == null) &&
+          !partitionColumn.transform().toString().equalsIgnoreCase(transformSpec.transformTypeString())) {
+        throw new UnsupportedOperationException(
+            "Invalid transform for column: " + transformSpec.getColumnName() +
+                " Expected: " + partitionColumn.transform() +
+                " Found: " + transformSpec.getTransformType());
+      }
+    }
+  }
+
+  private static UnboundPredicate<Object> getPartitionPredicate(PartitionData partitionData, PartitionField field,
+      int index, Schema schema) {
+    String columName = schema.findField(field.sourceId()).name();
+    TransformSpec transformSpec = TransformSpec.fromString(field.transform().toString(), columName);
+
+    UnboundTerm<Object> partitionColumn =
+        ObjectUtils.defaultIfNull(HiveIcebergFilterFactory.toTerm(columName, transformSpec),
+            Expressions.ref(field.name()));
+
+    return Expressions.equal(partitionColumn, partitionData.get(index, Object.class));
+  }
+
+  private static class PreAlterTableProperties {
     private String tableLocation;
     private String format;
     private Schema schema;
@@ -757,4 +912,5 @@ public class HiveIcebergMetaHook implements HiveMetaHook {
     private List<FieldSchema> partitionKeys;
     private PartitionSpecProxy partitionSpecProxy;
   }
+
 }
