@@ -20,9 +20,11 @@ package org.apache.hadoop.hive.ql.exec.vector.expressions;
 
 import java.io.Serializable;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
+import java.util.ArrayDeque;
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
+import java.util.Deque;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hive.common.type.DataTypePhysicalVariation;
 import org.apache.hadoop.hive.ql.exec.vector.ColumnVector;
@@ -36,32 +38,32 @@ import org.apache.hadoop.hive.ql.metadata.HiveException;
 
 /**
  * Base class for vector expressions.
- *
+ * <p>
  * A vector expression is a vectorized execution tree that evaluates the same result as a (row-mode)
  * ExprNodeDesc tree describes.
- *
+ * <p>
  * A vector expression has 0, 1, or more parameters and an optional output column.  These are
  * normally passed to the vector expression object' constructor.  A few special case classes accept
  * extra parameters via set* method.
- *
+ * <p>
  * A ExprNodeColumnDesc vectorizes to the IdentityExpression class where the input column number
  * parameter is the same as the output column number.
- *
+ * <p>
  * A ExprNodeGenericFuncDesc's generic function can vectorize to many different vectorized objects
  * depending on the parameter expression kinds (column, constant, etc) and data types.  Each
  * vectorized class implements the getDecription which indicates the particular expression kind
  * and data type specialization that class is designed for.  The Description is used by the
  * VectorizationContext class in matching the right vectorized class.
- *
+ * <p>
  * The constructor parameters need to be in the same order as the generic function because
  * the VectorizationContext class automates parameter generation and object construction.
- *
+ * <p>
  * Type information is remembered for the input parameters and the output type.
- *
+ * <p>
  * A vector expression has optional children vector expressions when 1 or more parameters need
  * to be calculated into vector scratch columns.  Columns and constants do not need children
  * expressions.
- *
+ * <p>
  * HOW TO to extend VectorExpression (some basic steps and hints):
  * 1. Create a subclass, and write a proper getDescriptor() (column/scalar?, number for args?, etc.)
  * 2. Define an explicit parameterless constructor
@@ -78,7 +80,7 @@ public abstract class VectorExpression implements Serializable {
 
   /**
    * Child expressions for parameters -- but only those that need to be computed.
-   *
+   * <p>
    * NOTE: Columns and constants are not included in the children.  That is: column numbers and
    * scalar values are passed via the constructor and remembered by the individual vector expression
    * classes. They are not represented in the children.
@@ -88,7 +90,7 @@ public abstract class VectorExpression implements Serializable {
   /**
    * ALL input parameter type information is here including those for (non-computed) columns and
    * scalar values.
-   *
+   * <p>
    * The vectorExpressionParameters() method is used to get the displayable string for the
    * parameters used by EXPLAIN, logging, etc.
    */
@@ -106,7 +108,7 @@ public abstract class VectorExpression implements Serializable {
   /**
    * Input column numbers of the vector expression, which should be reused by vector expressions.
    */
-  public int inputColumnNum[] = {-1, -1, -1};
+  public int[] inputColumnNum = {-1, -1, -1};
 
   /*
    * Use this constructor when there is NO output column.
@@ -125,9 +127,6 @@ public abstract class VectorExpression implements Serializable {
 
   /**
    * Constructor for 1 input column and 1 output column.
-   *
-   * @param inputColumnNum
-   * @param outputColumnNum
    */
   public VectorExpression(int inputColumnNum, int outputColumnNum) {
     this(inputColumnNum, -1, -1, outputColumnNum);
@@ -135,10 +134,6 @@ public abstract class VectorExpression implements Serializable {
 
   /**
    * Constructor for 2 input columns and 1 output column.
-   *
-   * @param inputColumnNum
-   * @param inputColumnNum2
-   * @param outputColumnNum
    */
   public VectorExpression(int inputColumnNum, int inputColumnNum2, int outputColumnNum) {
     this(inputColumnNum, inputColumnNum2, -1, outputColumnNum);
@@ -148,11 +143,6 @@ public abstract class VectorExpression implements Serializable {
    * Constructor for 3 input columns and 1 output column. Currently, VectorExpression is initialized
    * for a maximum of 3 input columns. In case an expression with more than 3 columns wants to reuse
    * logic here, inputColumnNum* fields should be extended.
-   *
-   * @param inputColumnNum
-   * @param inputColumnNum2
-   * @param inputColumnNum3
-   * @param outputColumnNum
    */
   public VectorExpression(int inputColumnNum, int inputColumnNum2, int inputColumnNum3, int outputColumnNum) {
     // By default, no children or inputs.
@@ -172,10 +162,8 @@ public abstract class VectorExpression implements Serializable {
 
   /**
    * Convenience method for expressions that uses arbitrary number of input columns in an array.
-   * @param inputColumnNum
-   * @param outputColumnNum
    */
-  public VectorExpression(int inputColumnNum[], int outputColumnNum) {
+  public VectorExpression(int[] inputColumnNum, int outputColumnNum) {
     // By default, no children or inputs.
     childExpressions = null;
     inputTypeInfos = null;
@@ -198,6 +186,14 @@ public abstract class VectorExpression implements Serializable {
 
   public VectorExpression[] getChildExpressions() {
     return childExpressions;
+  }
+
+  protected Collection<VectorExpression> getChildExpressionsForTransientInit() {
+    if (getChildExpressions() != null) {
+      return Arrays.asList(getChildExpressions());
+    } else {
+      return Collections.emptyList();
+    }
   }
 
   //------------------------------------------------------------------------------------------------
@@ -251,17 +247,12 @@ public abstract class VectorExpression implements Serializable {
 
     // Well, don't recurse but make sure all children are initialized.
     vecExpr.transientInit(conf);
-    List<VectorExpression> newChildren = new ArrayList<VectorExpression>();
-    VectorExpression[] children = vecExpr.getChildExpressions();
-    if (children != null) {
-      Collections.addAll(newChildren, children);
-    }
+
+    Deque<VectorExpression> newChildren = new ArrayDeque<>(vecExpr.getChildExpressionsForTransientInit());
+
     while (!newChildren.isEmpty()) {
-      VectorExpression childVecExpr = newChildren.remove(0);
-      children = childVecExpr.getChildExpressions();
-      if (children != null) {
-        Collections.addAll(newChildren, children);
-      }
+      VectorExpression childVecExpr = newChildren.removeFirst();
+      newChildren.addAll(childVecExpr.getChildExpressionsForTransientInit());
       childVecExpr.transientInit(conf);
     }
   }
@@ -309,8 +300,6 @@ public abstract class VectorExpression implements Serializable {
   }
   /**
    * This is the primary method to implement expression logic.
-   * @param batch
-   * @throws HiveException 
    */
   public abstract void evaluate(VectorizedRowBatch batch) throws HiveException;
 
